// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications should render 1`] = `
<div>
  <div>
    <div
      class="p-6 mb-5 border-2 border-theme-neutral-200 text-md rounded-xl text-theme-neutral-dark"
    >
      You have no notifications at this time.
    </div>
    <div>
      <div
        class="sc-AxjAm deEstu"
        height="80"
        width="200"
      >
        <svg>
          placeholder.svg
        </svg>
      </div>
    </div>
    <div
      class="my-3 border-2 border-b border-theme-neutral-contrast"
    />
    <div>
      <div
        class="sc-AxjAm deEstu"
        height="80"
        width="200"
      >
        <svg>
          placeholder.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications should render plugins 1`] = `
<div>
  <div>
    <div
      class="mb-2 text-sm font-bold text-theme-neutral"
    >
      Plugins
    </div>
    <div
      class="sc-AxirZ TjFbC"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <tbody
          role="rowgroup"
        >
          <tr>
            <td
              class="w-8"
            >
              <div
                class="flex p-2 mr-4 rounded-lg bg-logo"
              >
                <img
                  alt="ARK Explorer"
                  src="/static/media/ark-logo.bafd72bb.png"
                />
              </div>
            </td>
            <td>
              <span
                class="font-bold text-md text-theme-neutral-600"
              >
                ARK Explorer
              </span>
              <span
                class="text-md text-theme-neutral-600"
              >
                 
                - update v2.5.6
              </span>
            </td>
            <td>
              <div
                class="font-bold text-right cursor-pointer text-md text-theme-primary-500"
                data-testid="notifications__plugin-action"
              >
                Update now
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="mb-2 text-sm font-bold mt-9 text-theme-neutral"
    />
    <div
      class="relative"
      data-testid="TransactionTable"
    >
      <div
        class="sc-AxirZ TjFbC"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <tbody
            role="rowgroup"
          />
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications should render transactions 1`] = `
<div>
  <div>
    <div
      class="mb-2 text-sm font-bold text-theme-neutral"
    >
      Transactions
    </div>
    <div
      class="sc-AxirZ TjFbC"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
    <div
      class="mb-2 text-sm font-bold mt-9 text-theme-neutral"
    />
    <div
      class="relative"
      data-testid="TransactionTable"
    >
      <div
        class="sc-AxirZ TjFbC"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxhCb cqtLjm group"
              data-testid="TableRow"
            >
              <td
                class="w-24"
              >
                <div
                  class="sc-AxiKw hZNKUE"
                >
                  <div
                    class="flex items-center -space-x-1"
                    data-testid="TransactionRowMode"
                  >
                    <div
                      class="sc-AxgMl ittwqV border-theme-danger-contrast text-theme-danger"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        data-testid="TransactionRowMode__Sent"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gfBbJl"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                          title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-AxiKw taAfS"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="sc-AxheI fniENP text-theme-text font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      ASuusX…GQ3kqT
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-AxiKw hOGkQU justify-end"
                >
                  <div
                    class="sc-AxhUy gRLEpJ"
                    color="danger"
                    data-testid="TransactionRowAmount"
                  >
                    <span
                      data-testid="Amount"
                    >
                      121 
                    </span>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
